--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -182,7 +182,7 @@ BP_Kronen_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mapp
 CapsuleComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,BP_boss_C.Physics.ConstraintsGroup,BP_boss_C.Collision.Collision,BP_Charger_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision
 Character=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup,BP_Charger_C.Physics.ConstraintsGroup
 K2Node_CallFunction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BP_boss_C.Physics.ConstraintsGroup,BP_boss_C.Collision.Collision,BP_Charger_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision
-StaticMeshActor=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,BP_boss_C.Physics.ConstraintsGroup,BP_boss_C.Collision.Collision,BP_Charger_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision
+StaticMeshActor=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,BP_boss_C.Physics.ConstraintsGroup,BP_boss_C.Collision.Collision,BP_Charger_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Path Tracing.Path Tracing|Lighting Components
 BP_Slugger_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup,BP_Charger_C.Physics.ConstraintsGroup
 BP_Bulky_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup,BP_Charger_C.Physics.ConstraintsGroup
 BP_Charger_C=
@@ -392,6 +392,7 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 BP_ARProjectile_C=
 InstancedFoliageActor=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,BP_boss_C.Physics.ConstraintsGroup,BP_boss_C.Collision.Collision,BP_Charger_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision
+PostProcessVolume=PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Path Tracing.Path Tracing|Lighting Components,InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,BP_boss_C.Physics.ConstraintsGroup,BP_boss_C.Collision.Collision,BP_Charger_C.Physics.ConstraintsGroup,BoxComponent.Collision.Collision
 
 [EditorStartup]
 LastLevel=/Game/_Level/Island
@@ -2965,6 +2966,30 @@ DecalActor.Cooking=True
 DecalActor.HLOD=True
 DecalActor.Physics=True
 DecalActor.Networking=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Global Illumination=True
+PostProcessVolume.Reflections=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.Film Grain=True
+PostProcessVolume.Path Tracing=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.HLOD=True
+PostProcessVolume.Networking=True
+PostProcessVolume.Actor=True
+PostProcessVolume.LevelInstance=True
+PostProcessVolume.Cooking=True
+BrushComponent.TransformCommon=True
+BrushComponent.HLOD=True
+BrushComponent.Collision=True
+BrushComponent.PathTracing=True
+BrushComponent.Navigation=True
+BrushComponent.Tags=True
+BrushComponent.Cooking=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Level/_LevelAssets/_decals/Blood_Decal_1_Mat.Blood_Decal_1_Mat;
@@ -3577,7 +3602,7 @@ ActorComponent=
 SkeletalMeshComponent=
 SkinnedMeshComponent=
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
 SceneComponent=
 CapsuleComponent=
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -3589,8 +3614,8 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 SpringArmComponent="\"Object.Camera.SocketOffset\" \"Object.Camera.TargetOffset\" "
 ProjectileMovementComponent="\"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintNormal\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_boss_C=
 Character=
 Pawn=
@@ -3694,6 +3719,7 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PersonaOptions="\"Object.Preview Scene.Preview Scene|AdditionalMesh\" "
 EnhancedInputEditorSettings="\"Object.Blueprints\" "
 EditorExperimentalSettings="\"Object.Blueprints\" "
+PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [DetailCategoriesAdvanced]
 InputAction.Action=True
@@ -3727,11 +3753,12 @@ MaterialEditorInstanceConstant.General=False
 WorldSettings.LevelInstance=True
 WorldSettings.Tick=True
 LandscapeEditorObject.Tool Settings=True
+PostProcessVolume.Actor=False
 
 [RootWindow]
 ScreenPosition=X=394.000 Y=154.000
 WindowSize=X=1280.000 Y=717.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -4850,9 +4877,9 @@ ClothingSystemEditorInterface.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [SelectionDetails]
 PreserveScaleRatio=False
