--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -187,9 +187,9 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
@@ -218,13 +218,11 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
 OpenAssetsAtExit=/Game/_Core/_Player/_Widgets/_Widgets/WGP_MainMenu.WGP_MainMenu
-OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
-OpenAssetsAtExit=/Game/_Level/_LevelAssets/_Boss_PlayZone/Meterials/In_ZOne1.In_ZOne1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Boss_PlayZone/Meterials/In_ZOne1
-MRUItem1=/Game/_Core/_Player/DI_Player
-MRUItem2=/Game/_Core/_Player/_Widgets/_Widgets/WGP_MainMenu
+MRUItem0=/Game/_Core/_Player/_Widgets/_Widgets/WGP_MainMenu
+MRUItem1=/Game/_Level/_LevelAssets/_Boss_PlayZone/Meterials/In_ZOne1
+MRUItem2=/Game/_Core/_Player/DI_Player
 MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Sailor_Medals_Mat
 MRUItem4=/Game/_Level/_LevelAssets/_Props/_Furniture/Frame_SM
 MRUItem5=/Game/_Level/_LevelAssets/_Props/_Furniture/Ship_Model
@@ -841,7 +839,7 @@ DI_Player_C.Default=True
 DI_Player_C.Widgets=True
 DI_Player_C.Player Variables=True
 DI_Player_C.ComponentTick=True
-DI_Player_C.Weapon Info =True
+DI_Player_C.Weapon Info=True
 DI_Player_C.Inventory=True
 DI_Player_C.Physics=True
 DI_Player_C.Collision=True
@@ -1210,10 +1208,10 @@ MaterialExpressionConstant4Vector.MaterialExpression=True
 
 [DetailPropertyExpansion]
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-PanelWidget="\"Object.Content.Padding\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Widget="\"Object.Content.Padding\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Visual="\"Object.Content.Padding\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Object=
+PanelWidget="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Widget="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Visual="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Object="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Image="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -1223,9 +1221,9 @@ StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.S
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 WGP_MainMenu_C=
 UserWidget=
-VerticalBox="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-BackgroundBlur="\"Object.Content.Padding\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-ContentWidget="\"Object.Content.Padding\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+BackgroundBlur="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+ContentWidget="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.AutoSave\" \"Object.Blueprints\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -1250,7 +1248,7 @@ Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout
 CanvasPanel.Behavior=True
 K2Node_VariableGet.Variable=True
 FbxImportUI.Material=False
-BackgroundBlur.Appearance=True
+BackgroundBlur.Appearance=False
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/_GameCore/Splash_Screen/Widget/WGP_Splash.WGP_Splash=1
