Slight Bulk adjust
Reimported Body texture for Bulky Kronen

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -189,6 +189,8 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
@@ -197,17 +199,18 @@ RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/_Core/_Player/_Widgets/_Widgets/WGP_MainMenu.WGP_MainMenu
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_GameCore/Splash_Screen/WGP_Mouse
-MRUItem1=/Game/_Level/_LevelAssets/_Boss_PlayZone/Meterials/In_ZOne1
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Furniture/ClothingPile_Neat2
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_Furniture/Dresser3
-MRUItem4=/Game/_Level/_LevelAssets/_Props/_Materials/Dresser3_Texture
-MRUItem5=/Game/_Level/_LevelAssets/_Props/_Materials/Dresser3_Mat
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_Materials/ClothingPile_Neat2_Texture
-MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/ClothingPile_Neat2_Mat
+MRUItem0=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_DM
+MRUItem1=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk
+MRUItem2=/Game/_Core/_GameCore/Splash_Screen/WGP_Mouse
+MRUItem3=/Game/_Level/_LevelAssets/_Boss_PlayZone/Meterials/In_ZOne1
+MRUItem4=/Game/_Level/_LevelAssets/_Props/_Furniture/ClothingPile_Neat2
+MRUItem5=/Game/_Level/_LevelAssets/_Props/_Furniture/Dresser3
+MRUItem6=/Game/_Level/_LevelAssets/_Props/_Materials/Dresser3_Texture
+MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/Dresser3_Mat
+MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/ClothingPile_Neat2_Texture
+MRUItem9=/Game/_Level/_LevelAssets/_Props/_Materials/ClothingPile_Neat2_Mat
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -222,7 +225,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Level
+ContentBrowserDrawer.SelectedPaths=
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1214,13 +1217,13 @@ CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transfo
 PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Object=
 Image="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StreamableRenderAsset=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 WGP_MainMenu_C=
 UserWidget=
@@ -2452,8 +2455,8 @@ PinnedCommandList.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/_Materials/Plastic_Mat.Plastic_Mat;
