--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -221,12 +221,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/_Core/_Player/_Widgets/_Widgets/MainMenuStuff/BP_StartNewGame.BP_StartNewGame
-OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
-OpenAssetsAtExit=/Game/_Core/_Enemies/_Ennemy_Spawner/EnnemySpawner.EnnemySpawner
-OpenAssetsAtExit=/Game/_Core/_Enemies/_Animations/ABP_KrononSlow.ABP_KrononSlow
-OpenAssetsAtExit=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Walk1.KronenMale_Animations_Walk1
-OpenAssetsAtExit=/Game/_Core/_Enemies/_Animations/Notifiers/SoundsRandom.SoundsRandom
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/_Level/Island
@@ -273,7 +267,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Level
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -875,6 +869,7 @@ DI_Player_C.Default=True
 DI_Player_C.Widgets=True
 DI_Player_C.Player Variables=True
 DI_Player_C.ComponentTick=True
+DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Inventory=True
@@ -1628,7 +1623,6 @@ CapsuleComponent.Tags=True
 CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Cooking=True
 CapsuleComponent.Events=True
-DI_Player_C.Weapon Info =True
 SkeletalMeshComponent.Variable=True
 SkeletalMeshComponent.TransformCommon=True
 SkeletalMeshComponent.Sockets=True
@@ -3105,8 +3099,8 @@ FontEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PlacementMode]
 RecentlyPlaced=/Game/Opening_CS.Opening_CS;
@@ -3241,7 +3235,7 @@ Bp_BossZone_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Transform
 ArrowComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList
 SkeletalMeshComponent=
 SpringArmComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList
-CameraComponent=CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global Illumination,CameraComponent.PostProcess.Global Illumination|Lumen Global IlluminationAdvanced,CameraComponent.PostProcess.Path Tracing,CameraComponent.PostProcess.Path Tracing|Lighting Components
+CameraComponent=CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Global Illumination
 K2Node_CallFunction=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList
 LevelSequenceActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList
 K2Node=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList
