--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -192,6 +192,12 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
@@ -216,48 +222,44 @@ RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=Behavior Tree
-RecentAssetEditors=Behavior Tree
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=Behavior Tree
 OpenAssetsAtExit=/Game/_Core/_GameCore/Splash_Screen/Di_Splash.Di_Splash
 OpenAssetsAtExit=/Game/_Core/_Player/_Widgets/_Widgets/WGP_DemoMenu.WGP_DemoMenu
 OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
-OpenAssetsAtExit=/Game/_Core/_Enemies/BP_KronenFemale.BP_KronenFemale
+OpenAssetsAtExit=/Game/_Core/_Enemies/BP_Bulky.BP_Bulky
+OpenAssetsAtExit=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Walk_Anim.Enemy_Kronen_Bulk_Walk_Anim
+OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_FootstepsNoti.Bp_FootstepsNoti
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/BP_KronenFemale
-MRUItem1=/Game/_Core/_Player/DI_Player
-MRUItem2=/Game/_Level/Island
-MRUItem3=/Game/_Core/_Player/_Widgets/_Widgets/WGP_DemoMenu
-MRUItem4=/Game/_Core/_GameCore/Splash_Screen/Di_Splash
-MRUItem5=/Game/_Level/Spasch_Screen
-MRUItem6=/Game/_Core/_GameCore/main_mENU/Controller_Icon
-MRUItem7=/Game/_Core/_GameCore/Splash_Screen/real_mouse_cursor
-MRUItem8=/Game/_Core/_GameCore/main_mENU/BP_GM_Main_menu
-MRUItem9=/Game/_Core/_GameCore/main_mENU/BP_PC_Main_menu
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Outside/Gate
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Gate_SmallBars_Textures
-MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Gate_SmallBars
-MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/LockChain_Mat
-MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Gate_Bars_Texture
-MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Gate_Bars_Mat
-MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Playground_2
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Outside/Playground_SM
-MRUItem18=/Game/_Level/_LevelAssets/_Props/_Outside/Fire_Hydrant
-MRUItem19=/Game/_Core/NPCs/Ferry_Man/Textures/Ferry_Man1
-MRUItem20=/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_Holst_M
-MRUItem21=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Holst_DM
-MRUItem22=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_DM
-MRUItem23=/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M
-MRUItem24=/Game/_Level/_LevelAssets/_Boss_PlayZone/Bp_BossZone
-MRUItem25=/Game/_Level/_LevelAssets/_CamSwitcher/NewCamSwitch
-MRUItem26=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Bulky
-MRUItem27=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Kronen
-MRUItem28=/Game/_Core/_Enemies/BP_KronenFast
-MRUItem29=/Game/_Core/_Enemies/_AiSystems/_BHT/BB_Enemy
+MRUItem0=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_FootstepsNoti
+MRUItem1=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Death_Anim
+MRUItem2=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Attack_Anim
+MRUItem3=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Idle_Anim
+MRUItem4=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Walk_Anim
+MRUItem5=/Game/_Core/_Enemies/BP_Bulky
+MRUItem6=/Game/_Core/_Enemies/BP_KronenFemale
+MRUItem7=/Game/_Core/_Player/DI_Player
+MRUItem8=/Game/_Level/Island
+MRUItem9=/Game/_Core/_Player/_Widgets/_Widgets/WGP_DemoMenu
+MRUItem10=/Game/_Core/_GameCore/Splash_Screen/Di_Splash
+MRUItem11=/Game/_Level/Spasch_Screen
+MRUItem12=/Game/_Core/_GameCore/main_mENU/Controller_Icon
+MRUItem13=/Game/_Core/_GameCore/Splash_Screen/real_mouse_cursor
+MRUItem14=/Game/_Core/_GameCore/main_mENU/BP_GM_Main_menu
+MRUItem15=/Game/_Core/_GameCore/main_mENU/BP_PC_Main_menu
+MRUItem16=/Game/_Level/_LevelAssets/_Props/_Outside/Gate
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/Gate_SmallBars_Textures
+MRUItem18=/Game/_Level/_LevelAssets/_Props/_Materials/Gate_SmallBars
+MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/LockChain_Mat
+MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/Gate_Bars_Texture
+MRUItem21=/Game/_Level/_LevelAssets/_Props/_Materials/Gate_Bars_Mat
+MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Playground_2
+MRUItem23=/Game/_Level/_LevelAssets/_Props/_Outside/Playground_SM
+MRUItem24=/Game/_Level/_LevelAssets/_Props/_Outside/Fire_Hydrant
+MRUItem25=/Game/_Core/NPCs/Ferry_Man/Textures/Ferry_Man1
+MRUItem26=/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_Holst_M
+MRUItem27=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Holst_DM
+MRUItem28=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_DM
+MRUItem29=/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -272,7 +274,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Bulky
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2716,7 +2718,7 @@ ComboBoxKey="\"Object.Content.Options\" \"Object.Render Transform.RenderTransfor
 Spacer="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.WidgetStyle\" \"Object.Style.ItemStyle\" \"Object.Style.ItemStyle.InactiveHoveredBrush.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.Blackboard\" "
+DataAsset="\"Object.SkeletalMeshes\" "
 SkeletalMesh="\"Object.LODSettings.MinLod\" \"Object.LODSettings.MaxNumStreamedLODs\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 SkinnedAsset="\"Object.LODSettings.MinLod\" \"Object.LODSettings.MaxNumStreamedLODs\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 LODInfoUILayout="\"Object.LODInfo.ScreenSize\" \"Object.LODInfo.BuildSettings\" \"Object.LODInfo.ReductionSettings\" "
@@ -4564,7 +4566,7 @@ SkeletalMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Trans
 ContainerBP_blue_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
 Bp_BossZone_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
 ArrowComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
-SkeletalMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,Ferry_BP_C.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop
+SkeletalMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop
 SpringArmComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList
 CameraComponent=CameraComponent.PostProcess.Global Illumination,Cam_C.PostProcess.Lens,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
 K2Node_CallFunction=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop
