--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,8 +190,9 @@ Advanced=False
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -221,13 +222,7 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/_Core/_GameCore/Splash_Screen/Di_Splash.Di_Splash
-OpenAssetsAtExit=/Game/_Core/_Player/_Widgets/_Widgets/WGP_DemoMenu.WGP_DemoMenu
 OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
-OpenAssetsAtExit=/Game/_Core/_Enemies/BP_Bulky.BP_Bulky
-OpenAssetsAtExit=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Walk_Anim.Enemy_Kronen_Bulk_Walk_Anim
-OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_FootstepsNoti.Bp_FootstepsNoti
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_FootstepsNoti
@@ -274,7 +269,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Bulky
+ContentBrowserDrawer.SelectedPaths=/Game/_ZTD/_Sounds
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -296,7 +291,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.603907704
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Core/_GameCore/main_mENU
+ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_Boss_PlayZone/Meterials
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2675,6 +2670,8 @@ WGP_DemoMenu_C.Rendering=True
 WGP_DemoMenu_C.Navigation=True
 TextBlock.Clipping=False
 DI_Player_C.Weapon Info =True
+Bp_FootstepsNoti_C.Default=True
+Bp_FootstepsNoti_C.AnimNotify=True
 
 [DetailPropertyExpansion]
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -3257,6 +3254,9 @@ SpringArmComponent.Lag=False
 /Game/_Core/_GameCore/main_mENU/BP_PC_Main_menu.BP_PC_Main_menu=1
 /Game/_Core/_GameCore/main_mENU/BP_GM_Main_menu.BP_GM_Main_menu=1
 /Game/_Core/_GameCore/Splash_Screen/real_mouse_cursor.real_mouse_cursor=1
+/Game/_Core/_Player/_Widgets/_Widgets/WGP_DemoMenu.WGP_DemoMenu=1
+/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Walk_Anim.Enemy_Kronen_Bulk_Walk_Anim=1
+/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_FootstepsNoti.Bp_FootstepsNoti=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3330,7 +3330,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/winsc/Documents/GitHub/The_Influence/DeepInfection/Content/_Level
+UNR=../../../../Projects/The_Influence/DeepInfection/Content/_Level
 BRUSH=../../../../Projects/The_Influence/DeepInfection/Content/
 FBX=../../../../Projects/The_Influence/DeepInfection/Content/
 FBXAnim=../../../../Projects/The_Influence/DeepInfection/Content/
@@ -4431,8 +4431,8 @@ FontEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/_Outside/Gate.Gate;
@@ -4566,7 +4566,7 @@ SkeletalMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Trans
 ContainerBP_blue_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
 Bp_BossZone_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
 ArrowComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
-SkeletalMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop
+SkeletalMeshComponent=
 SpringArmComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList
 CameraComponent=CameraComponent.PostProcess.Global Illumination,Cam_C.PostProcess.Lens,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
 K2Node_CallFunction=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop
