--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -191,8 +191,10 @@ Common=False
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=LevelSequenceEditor
@@ -203,8 +205,6 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=PropertyEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
@@ -223,20 +223,23 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=TextureEditor
+OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Drop_Ammo.Drop_Ammo
+OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/DropBandige.DropBandige
+OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/DropMedkit.DropMedkit
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Player/_Widgets/Demmo/EndDemo
-MRUItem1=/Game/_Level/Cutscenes
-MRUItem2=/Game/_Level/Spasch_Screen
-MRUItem3=/Game/Moose_CS
-MRUItem4=/Game/_Core/_GameCore/Cutcene/CutceneLoaderChar
-MRUItem5=/Game/_Level/_LevelAssets/Demo_CeneSpawner/BP_SpawnMoosCene
-MRUItem6=/Game/_Level/Island
-MRUItem7=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_ItemMenu
-MRUItem8=/Game/_Core/_Player/DI_Player
-MRUItem9=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Drop_Ammo
-MRUItem10=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/DropBandige
-MRUItem11=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/DropMedkit
+MRUItem0=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/DropMedkit
+MRUItem1=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/DropBandige
+MRUItem2=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Drop_Ammo
+MRUItem3=/Game/_Core/_Player/_Widgets/Demmo/EndDemo
+MRUItem4=/Game/_Level/Cutscenes
+MRUItem5=/Game/_Level/Spasch_Screen
+MRUItem6=/Game/Moose_CS
+MRUItem7=/Game/_Core/_GameCore/Cutcene/CutceneLoaderChar
+MRUItem8=/Game/_Level/_LevelAssets/Demo_CeneSpawner/BP_SpawnMoosCene
+MRUItem9=/Game/_Level/Island
+MRUItem10=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_ItemMenu
+MRUItem11=/Game/_Core/_Player/DI_Player
 MRUItem12=/Game/_Core/_Enemies/enemy_sounds/bulky/6-11-24_Bulky_Idle
 MRUItem13=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Idle_Anim
 MRUItem14=/Game/_Core/_Enemies/BP_Bulky
@@ -269,7 +272,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player/_Widgets/Demmo
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3430,7 +3433,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=299.000 Y=70.000
@@ -4646,7 +4649,7 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.LevelEditor.Externa
 LogVisualizerSettings=EditorKeyboardShortcutSettings.LevelEditor.ExternalBuilds,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorStyleSettings.Graphs.Preview
 SkeletalMesh=SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 LODInfoUILayout=
-SceneComponent=
+SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
 Ferry_BP_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
 StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
 Floating_ferry_C=StaticMeshActor.Physics.ConstraintsGroup
